# python-doveadm

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  build-builder.sh  build-deb.sh  builder-entrypoint.sh  clean.sh  release.sh  requirements.txt  setup.cfg  setup.py  stdeb.cfg  tox.ini
.gitlab/: CODEOWNERS
doveadm/: __about__.py  __init__.py  fs.py  mailbox.py  misc.py
tests/: __init__.py  test_base.py  test_doveadm.py
tests/conf/: dovecot.conf.tmpl
