[metadata]
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = TBD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: TBD
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration

[install]
compile = 1
optimize = 1

[bdist_wheel]
universal = 0

[aliases]
release = clean --all sdist --formats=gztar bdist_wheel --python-tag=py3 upload --sign
